[tool.poetry]
name = "boxcli"
version = "1.5.2"
description = "Create simple and beautiful boxes in the terminal."
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
maintainers = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NightShade256/boxcli"
keywords = [
    "terminal",
    "cli",
    "boxes",
    "easy-to-use",
]
classifiers = [
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
wcwidth = "^0.2.5"
rich = "^7.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"